--- a/_config.yml
+++ b/_config.yml
@@ -21,9 +21,9 @@ description: >- # this means to ignore newlines until "baseurl:"
   Google search results) and in your feed.xml site description.
 baseurl: "/rbsdportfolio" # the subpath of your site, e.g. /blog
 url: "https://rskwiat.github.io" # the base hostname & protocol for your site, e.g. http://example.com
-twitter_username: jekyllrb
-github_username:  jekyll
+
 data_dir: data
+source: src
 
 # Build settings
 markdown: kramdown
