updating all files and setting up images for everything demo

--- a/src/data/students.yml
+++ b/src/data/students.yml
@@ -1,11 +1,11 @@
 - name: Naylah Hinton
   url: twitter.com
-  img: https://via.placeholder.com/150C
+  img: student/mzevallos.jpg
 
 - name: Ola Farrag
   url: facebook.com
-  img: https://via.placeholder.com/150C
+  img: student/mzevallos.jpg
 
 - name: Rachel Thompson
   url: google.com
-  img: https://via.placeholder.com/150C
+  img: student/mzevallos.jpg
