moving files outside of src for gh-pages

--- a/data/students.yml
+++ b/data/students.yml
@@ -9,3 +9,7 @@
 - name: Rachel Thompson
   url: google.com
   img: student/mzevallos.jpg
+
+- name: New Student
+  url: duck.com
+  img: student/mzevallos.jpg
